--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -4,3 +4,10 @@
     justify-content: center;
     align-items: center;
 }
+
+#navbar {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 10vw;
+}
