Minor spacing improvements to elements in the bottom section.

--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -32,3 +32,11 @@
     width: 30%;
     text-align: center;
 }
+
+#bottom_section h1,h2,h3,h4,h5,h6 {
+    margin-bottom: 0px;
+}
+
+#bottom_section p {
+    margin-top: 0.2vw;
+}
