--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-#body_tag h1,h2,h3,h4,h5,h6 {
+#body_tag :is(h1,h2,h3,h4,h5,h6) {
     text-align: center;
 }
 
@@ -43,7 +43,7 @@
     text-align: center;
 }
 
-#bottom_section h1,h2,h3,h4,h5,h6 {
+#bottom_section :is(h1,h2,h3,h4,h5,h6) {
     margin-bottom: 0px;
 }
 
