--- a/css/index.css
+++ b/css/index.css
@@ -14,11 +14,25 @@
     justify-content: center;
     align-items: flex-start;
     gap: 10vw;
+
+    background-color:rgb(70, 70, 70);
 }
 
-#navbar * {
+#navbar h3 {
+    margin: 1vw 0 1vw 0;
+}
+
+#navbar a {
     width: 15%;
     text-align: center;
+    padding: 1vw 0.4vw 1vw 0.4vw;
+
+    text-decoration: none;
+    color: white;
+}
+
+#navbar a:hover {
+    background-color:rgb(50, 50, 50);
 }
 
 #body_content {
