--- a/css/index.css
+++ b/css/index.css
@@ -1,66 +1,70 @@
-#body_tag :is(h1,h2,h3,h4,h5,h6) {
-    text-align: center;
+#body_tag :is(h1, h2, h3, h4, h5, h6) {
+  text-align: center;
 }
 
 #title {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #navbar {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 10vw;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 10vw;
 
-    background-color:rgb(70, 70, 70);
+  background-color: rgb(70, 70, 70);
 }
 
 #navbar h3 {
-    margin: 1vw 0 1vw 0;
+  margin: 1vw 0 1vw 0;
 }
 
 #navbar a {
-    width: 15%;
-    text-align: center;
-    padding: 1vw 0.4vw 1vw 0.4vw;
+  width: 15%;
+  text-align: center;
+  padding: 1vw 0.4vw 1vw 0.4vw;
 
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 #navbar a:hover {
-    background-color:rgb(50, 50, 50);
+  background-color: rgb(50, 50, 50);
 }
 
 #body_content {
-    margin: 0 5vw 0 5vw;
+  margin: 0 5vw 0 5vw;
 }
 
 #our_story img {
-    float: left;
-    margin: 2vw;
+  float: left;
+  margin: 2vw;
 }
 
 #bottom_section {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 10vw;
-    clear: left;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 10vw;
+  clear: left;
+
+  /*background-color:rgb(70, 70, 70);
+    color: rgb(255, 255, 255);*/
 }
 
 #bottom_section div {
-    width: 30%;
-    text-align: center;
+  width: 30%;
+  text-align: center;
+  /*background-color: rgb(50, 50, 50);*/
 }
 
-#bottom_section :is(h1,h2,h3,h4,h5,h6) {
-    margin-bottom: 0px;
+#bottom_section :is(h1, h2, h3, h4, h5, h6) {
+  margin-bottom: 0px;
 }
 
 #bottom_section p {
-    margin-top: 0.2vw;
+  margin-top: 0.2vw;
 }
