--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -1,8 +1,28 @@
+body {
+  font-family: Georgia, "Times New Roman", Times, serif;
+
+  margin: 0;
+  padding: 0;
+}
+
+body :is(h1, h2, h3, h4, h5, h6) {
+  text-align: center;
+}
+
 #title {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  font-family: "Lucida Handwriting", Georgia, "Times New Roman", Times, serif;
+}
+
+#subtitle {
+  width: 30%;
+  margin: 0 35% 0 35%;
+  padding: 1vw 0 1vw 0;
+  border-bottom: 2px solid black;
 }
 
 #navbar {
@@ -11,7 +31,8 @@
   align-items: flex-start;
   gap: 10vw;
 
-  background-color: rgb(70, 70, 70);
+  background-color: rgb(211, 197, 180);
+  border-bottom: 2px solid black;
 }
 
 #navbar h3 {
@@ -24,36 +45,63 @@
   padding: 1vw 0.4vw 1vw 0.4vw;
 
   text-decoration: none;
-  color: white;
+  color: black;
 }
 
 #navbar a:hover {
-  background-color: rgb(50, 50, 50);
+  background-color: rgb(204, 173, 132);
 }
 
 #testimonials {
   text-align: center;
-  margin: 0 5vw 0 5vw;
+  padding: 1vw 5vw 3vw 5vw;
+  background-color: rgb(211, 197, 180);
+  font-size: large;
+
+  border-top: 2px solid black;
 }
 
 #testimonials div {
-  margin: 5vw 0 5vw 0;
+  margin: 2vw 0 2vw 0;
 }
 
-#testimonials div p:first-child {
-  font-size: large;
+#testimonials > div p:nth-child(2) {
+  font-size: medium;
+  border-bottom: 1px solid black;
+  padding-bottom: 1vw;
 }
 
 #bottom_section {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  gap: 10vw;
+  gap: 4vw;
+  clear: left;
+
+  background-color: rgb(211, 197, 180);
+  border-top: 2px solid black;
+  padding: 1vw 0 1vw 0;
 }
 
 #bottom_section div {
   width: 30%;
   text-align: center;
+
+  padding: 0 2vw 0 2vw;
+  height: 10rem;
+}
+
+#bottom_section > div:nth-child(1) {
+  border-right: 2px solid black;
+}
+
+#bottom_section > div:nth-child(2) {
+  border-right: 2px solid black;
+  border-left: 2px solid black;
+}
+
+#bottom_section > div:nth-child(3) {
+  border-left: 2px solid black;
 }
 
 #bottom_section :is(h1, h2, h3, h4, h5, h6) {
