--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,11 @@
-#body_tag {
+body {
   font-family: Georgia, "Times New Roman", Times, serif;
 
   margin: 0;
   padding: 0;
 }
 
-#body_tag :is(h1, h2, h3, h4, h5, h6) {
+body :is(h1, h2, h3, h4, h5, h6) {
   text-align: center;
 }
 
