--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,14 @@ body :is(h1, h2, h3, h4, h5, h6) {
   background-color: rgb(204, 173, 132);
 }
 
+/* testimonials.html and contact_us.html use this*/
+#subtitle {
+  width: 30%;
+  margin: 0 35% 0 35%;
+  padding: 1vw 0 1vw 0;
+  border-bottom: 2px solid black;
+}
+
 #bottom_section {
   display: flex;
   justify-content: center;
