--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -11,6 +11,15 @@
   margin: 2vw 0 2vw 0;
 }
 
+#testimonials > div p:nth-child(1):hover {
+  transform: scale(1.05);
+  transition: transform 0.2s;
+}
+
+#testimonials > div p:nth-child(1) {
+  transition: transform 0.2s;
+}
+
 #testimonials > div p:nth-child(2) {
   font-size: medium;
   border-bottom: 1px solid black;
