--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -11,7 +11,7 @@
   margin: 2vw 0 2vw 0;
 }
 
-#testimonials > div p:nth-child(1):hover {
+#testimonials > div:hover p:nth-child(1) {
   transform: scale(1.05);
   transition: transform 0.2s;
 }
