--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,11 @@
   border-bottom: 2px solid black;
 }
 
+#our_story {
+  border-bottom: 2px solid black;
+  padding-bottom: 1vw;
+}
+
 #our_story img {
   float: left;
   margin: 0.5vw 2vw 0.5vw 2vw;
