--- a/css/index.css
+++ b/css/index.css
@@ -18,3 +18,12 @@
   float: left;
   margin: 0.5vw 2vw 0.5vw 2vw;
 }
+
+#opening_times_normal {
+  transition: transform 1s;
+}
+
+#opening_times_selected {
+  transform: scale(1.1);
+  transition: transform 1s;
+}
