--- a/css/main.css
+++ b/css/main.css
@@ -29,9 +29,7 @@ body img {
 
 #navbar {
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 10vw;
+  justify-content: space-around;
 
   background-color: rgb(211, 197, 180);
   border-bottom: 2px solid black;
@@ -125,7 +123,6 @@ body img {
   #navbar {
     display: flex;
     justify-content: space-between;
-    gap: 0vw;
   }
 
   #bottom_section p {
